--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,69 +1,5 @@
 version: "3"
-
-# Sources:
-# https://github.com/pi-hole/docker-pi-hole/blob/master/README.md
-
 services:
-  jwilder-proxy:
-    image: jwilder/nginx-proxy
-    ports:
-      - '80:80'
-    environment:
-      DEFAULT_HOST: pihole.federicociro.lan
-    volumes:
-      - '/var/run/docker.sock:/tmp/docker.sock'
-    restart: always
-
-  pihole:
-    image: pihole/pihole:latest
-    ports:
-      - '53:53/tcp'
-      - '53:53/udp'
-      - "67:67/udp"
-      - '8053:80/tcp'
-      - "443:443/tcp"
-    volumes:
-      - './etc-pihole/:/etc/pihole/'
-      - './etc-dnsmasq.d/:/etc/dnsmasq.d/'
-      # run `touch ./var-log/pihole.log` first unless you like errors
-      # - './var-log/pihole.log:/var/log/pihole.log'
-    # Recommended but not required (DHCP needs NET_ADMIN)
-    #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
-    cap_add:
-      - NET_ADMIN
-    environment:
-#      ServerIP: 192.168.41.55
-      PROXY_LOCATION: pihole
-      VIRTUAL_HOST: pihole.federicociro.lan
-      VIRTUAL_PORT: 80
-      TZ: ${TZ}
-      WEBPASSWORD: ${WEBPASSWORD}
-      DNS1: ${DNS1}
-      DNS2: ${DNS2}
-    extra_hosts:
-      # Resolve to nothing domains (terminate connection)
-      - 'nw2master.bioware.com nwn2.master.gamespy.com:0.0.0.0'
-      # LAN hostnames for other docker containers using jwilder
-      - 'yourDomain.lan:192.168.41.55'
-      - 'pihole pihole.yourDomain.lan:192.168.41.55'
-      - 'ghost ghost.yourDomain.lan:192.168.41.55'
-      - 'wordpress wordpress.yourDomain.lan:192.168.41.55'
-    restart: always
-
-#   Another container you might want to have running through the proxy
-#   Note it also have ENV Vars like pihole and a host under pihole's extra_hosts
-#  ghost:
-#    image: fractalf/ghost
-#    ports:
-#      - '2368:2368/tcp'
-#    volumes:
-#      - '/etc/ghost/:/ghost-override'
-#    environment:
-#      PROXY_LOCATION: ghost
-#      VIRTUAL_HOST: ghost.yourDomain.lan
-#      VIRTUAL_PORT: 2368
-#    restart: always
-
   portainer:
     image: portainer/portainer
     command: -H unix:///var/run/docker.sock
@@ -73,7 +9,51 @@ services:
       - 8000:8000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - portainer_data:/data
-
+      - ./portainer_data:/data
+  npm:
+    image: 'jc21/nginx-proxy-manager:latest'
+    ports:
+      - 80:80
+      - 81:81
+      - 443:443
+    environment:
+      DB_MYSQL_HOST: "db-npm"
+      DB_MYSQL_PORT: 3306
+      DB_MYSQL_USER: "npm"
+      DB_MYSQL_PASSWORD: "npm"
+      DB_MYSQL_NAME: "npm"
+    volumes:
+      - ./npm-data:/data
+      - ./letsencrypt:/etc/letsencrypt
+  db-npm:
+    image: 'jc21/mariadb-aria:latest'
+    environment:
+      MYSQL_ROOT_PASSWORD: 'npm'
+      MYSQL_DATABASE: 'npm'
+      MYSQL_USER: 'npm'
+      MYSQL_PASSWORD: 'npm'
+    volumes:
+      - ./npm-data/mysql:/var/lib/mysql
+  pihole:
+    image: pihole/pihole:latest
+    ports:
+      - '53:53/tcp'
+      - '53:53/udp'
+      - '67:67/udp'
+      - '9080:80/tcp'
+      - '9443:443/tcp'
+    volumes:
+      - './etc-pihole:/etc/pihole/'
+      - './etc-dnsmasq.d:/etc/dnsmasq.d/'
+      # run `touch ./var-log/pihole.log` first unless you like errors
+      # - './var-log/pihole.log:/var/log/pihole.log'
+    environment:
+      TZ: 'Europe/Madrid'
+      WEBPASSWORD: '7yCY8flx1254'
+    restart: always
 volumes:
   portainer_data:
+  npm-data:
+  letsencrypt:
+  etc-pihole:
+  etc-dnsmasq.d:
