--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -46,18 +46,19 @@ services:
     restart: always
   nextcloud-database:
     container_name: nextcloud-db
-    image: postgres
+    image: mariadb
+    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
     environment:
-      - POSTGRES_DB_FILE=/run/secrets/postgres_db
-      - POSTGRES_USER_FILE=/run/secrets/postgres_user
-      - POSTGRES_PASSWORD_FILE=/run/secrets/postgres_password
+      - MYSQL_ROOT_PASSWORD=/run/secrets/mariadb_root_password
+      - MYSQL_PASSWORD=/run/secrets/mariadb_password
+      - MYSQL_DATABASE=nextcloud
+      - MYSQL_USER=nextcloud
     secrets:
-      - postgres_db
-      - postgres_password
-      - postgres_user
+      - mariadb_root_password
+      - mariadb_password
     restart: always
     volumes:
-      - ./nextcloud-db-data:/var/lib/postgresql/data
+      - ./nextcloud-db:/var/lib/mysql
   nextcloud:
     container_name: nextcloud
     image: nextcloud
@@ -85,17 +86,15 @@ volumes:
   portainer:
   pihole:
   nextcloud:
-  nextcloud-db-data:
+  nextcloud-db:
 secrets:
   pihole_password:
     file: pihole_password.txt
-  nextcloud_admin_password:
-    file: nextcloud_admin_password.txt
   nextcloud_admin_user:
     file: nextcloud_admin_user.txt
-  postgres_db:
-    file: postgres_db.txt
-  postgres_password:
-    file: postgres_password.txt
-  postgres_user:
-    file: postgres_user.txt
+  nextcloud_admin_password:
+    file: nextcloud_admin_password.txt
+  mariadb_root_password:
+    file: mariadb_root_password.txt
+  mariadb_password:
+    file: mariadb_password.txt
