--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -66,10 +66,10 @@ services:
     ports:
       - 8082:80
     environment:
-      - POSTGRES_HOST=nextcloud-database
-      - POSTGRES_DB_FILE=/run/secrets/postgres_db
-      - POSTGRES_USER_FILE=/run/secrets/postgres_user
-      - POSTGRES_PASSWORD_FILE=/run/secrets/postgres_password
+      - MYSQL_PASSWORD=/run/secrets/mariadb_password
+      - MYSQL_DATABASE=nextcloud
+      - MYSQL_USER=nextcloud
+      - MYSQL_HOST=nextcloud-database
       - NEXTCLOUD_ADMIN_PASSWORD_FILE=/run/secrets/nextcloud_admin_password
       - NEXTCLOUD_ADMIN_USER_FILE=/run/secrets/nextcloud_admin_user
     volumes:
@@ -79,9 +79,7 @@ services:
     secrets:
       - nextcloud_admin_password
       - nextcloud_admin_user
-      - postgres_db
-      - postgres_password
-      - postgres_user
+      - mariadb_password
 volumes:
   portainer:
   pihole:
