--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -70,7 +70,7 @@ services:
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
       - MYSQL_HOST=nextcloud-database
-      - NEXTCLOUD_ADMIN_PASSWORD=/run/secrets/nextcloud_admin_password
+#      - NEXTCLOUD_ADMIN_PASSWORD=/run/secrets/nextcloud_admin_password
       - NEXTCLOUD_ADMIN_USER=admin
     volumes:
       - ./nextcloud:/var/www/html
