Small fix pihole ports

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,11 +15,11 @@ services:
     container_name: pihole
     image: pihole/pihole:latest
     ports:
-      - '53:53/tcp'
-      - '53:53/udp'
-#      - '67:67/udp'
-      - '8080:80/tcp'
-      - '8081:443/tcp'
+      - 53:53/tcp
+      - 53:53/udp
+#      - '67:67/udp
+      - 8080:80/tcp
+      - 8081:443/tcp
     dns:
       - '127.0.0.1'
       - '1.1.1.1'
