--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,12 +17,12 @@ services:
     ports:
       - 53:53/tcp
       - 53:53/udp
-#      - '67:67/udp
+#      - 67:67/udp
       - 8080:80/tcp
       - 8081:443/tcp
     dns:
-      - '127.0.0.1'
-      - '1.1.1.1'
+      - 1.1.1.1
+      - 1.0.0.1
     volumes:
       - './pihole/etc-pihole:/etc/pihole/'
       - './pihole/etc-dnsmasq.d:/etc/dnsmasq.d/'
@@ -31,19 +31,13 @@ services:
     environment:
       - TZ='Europe/Madrid'
       - WEBPASSWORD=/run/secrets/pihole_password
-      - DNS1='127.0.0.1#5053'
-      - DNS2='127.0.0.1#5053'
-      - INTERFACE='eth0'
-      - DNSMASQ_LISTENING='eth0'
+      - DNS1=127.0.0.1#5053
+      - DNS2=127.0.0.1#5053
+      - INTERFACE=eth0
+      - DNSMASQ_LISTENING=eth0
     restart: always
     secrets:
       - pihole_password
-  unbound:
-    container_name: unbound
-    image: klutchell/unbound
-    ports:
-      - '5053:5053/udp'
-    restart: always
   nextcloud-database:
     container_name: nextcloud-db
     image: mariadb
