--- a/docker-apps/portainer/docker-compose.yml
+++ b/docker-apps/portainer/docker-compose.yml
@@ -11,8 +11,9 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer-data:/data
-    ports:
-      - 8000:8000
-      - 9000:9000
+#    ports:
+#      - 8000:8000
+#      - 9000:9000
+    network_mode: host
 volumes:
   portainer-data:
