--- a/docker-apps/odoo/docker-compose.yaml
+++ b/docker-apps/odoo/docker-compose.yaml
@@ -1,24 +1,29 @@
-version: "3.0"
+version: '3.1'
+
 services:
-    odoo:
-        image: odoo:14.0
-#     platform: linux/amd64
-        container_name: odoo14
-        depends_on:
-            - postgresql
-        tty: true
-        stdin_open: true
-        ports:
-            - "8069:8069"
-        volumes:
-            - ./addons:/mnt/extra-addons
-            - ./conf:/etc/odoo
-        environment:
-            - HOST=postgres12
-    postgresql:
-        image: postgres:12.4
-        container_name: postgres12
-        environment:
-            - POSTGRES_DB=postgres
-            - POSTGRES_PASSWORD=odoo
-            - POSTGRES_USER=odoo
+  web:
+    image: odoo
+    container_name: oddo_app
+    env_file:
+      - db.env
+    depends_on:
+      - db
+    ports:
+      - "8369:8069"
+    restart: unless-stopped
+#    volumes:
+#      - /home/feder/docker/odoo/odoo-data:/var/lib/odoo
+
+  db:
+    image: postgres
+    container_name: odoo_db
+    env_file:
+      - db.env
+#    volumes:
+#      - /home/feder/docker/odoo/odoo-db:/var/lib/odoo
+    restart: unless-stopped
+
+#volumes:
+#  odoo-data:
+#  odoo-db:
+  
