--- a/docker-apps/pihole/docker-compose.yaml
+++ b/docker-apps/pihole/docker-compose.yaml
@@ -1,36 +1,33 @@
-version: '3.0'
-# Source: https://github.com/chriscrowe/docker-pihole-unbound/tree/main/one-container
+version: "3"
 
+# More info at https://github.com/pi-hole/docker-pi-hole/ and https://docs.pi-hole.net/
+# Also: https://github.com/chriscrowe/docker-pihole-unbound
 services:
   pihole:
     container_name: pihole
-    image: cbcrowe/pihole-unbound:latest
+    image: pihole/pihole:latest
     hostname: ${HOSTNAME}
     domainname: ${DOMAIN_NAME}
     ports:
-      - 443:443/tcp
-      - 53:53/tcp
-      - 53:53/udp
-      - ${PIHOLE_WEBPORT:-80}:80/tcp #Allows use of different port to access pihole web interface when other docker containers use port 80
-      # - 5335:5335/tcp # Uncomment to enable unbound access on local server
-      # - 22/tcp # Uncomment to enable SSH
+      - "53:53/tcp"
+      - "53:53/udp"
+      - "67:67/udp"
+      - "8180:80/tcp"
     environment:
-#      - FTLCONF_REPLY_ADDR4=${FTLCONF_REPLY_ADDR4}
       - TZ=${TZ:-UTC}
       - WEBPASSWORD=${WEBPASSWORD}
       - WEBTHEME=${WEBTHEME:-default-light}
-#      - REV_SERVER=${REV_SERVER:-false}
-#      - REV_SERVER_TARGET=${REV_SERVER_TARGET}
-#      - REV_SERVER_DOMAIN=${REV_SERVER_DOMAIN}
-#      - REV_SERVER_CIDR=${REV_SERVER_CIDR}
-      - PIHOLE_DNS_=127.0.0.1#5335
-      - DNSSEC="true"
-      - DNSMASQ_LISTENING=single
+#     -  ServerIP: ${ip}
+      - PIHOLE_DNS_=1.1.1.1;1.0.0.1
+    # Volumes store your data between container upgrades
     volumes:
-      - etc_pihole-unbound:/etc/pihole:rw
-      - etc_pihole_dnsmasq-unbound:/etc/dnsmasq.d:rw
+      - '/home/feder/docker/pihole/etc-pihole/:/etc/pihole/'
+      - '/home/feder/docker/pihole/etc-dnsmasq.d/:/etc/dnsmasq.d/'
+    # Recommended but not required (DHCP needs NET_ADMIN)
+    #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
+#    cap_add:
+#      - NET_ADMIN
     restart: unless-stopped
-
 volumes:
-  etc_pihole-unbound:
-  etc_pihole_dnsmasq-unbound:
+  etc-pihole:
+  etc-dnsmasq.d:
