--- a/docker-apps/odoo/docker-compose.yaml
+++ b/docker-apps/odoo/docker-compose.yaml
@@ -8,25 +8,27 @@ services:
       - db
     ports:
       - "8069:8069"
-#    restart: unless-stopped
-#    volumes:
+    restart: unless-stopped
+    volumes:
 #      - /home/feder/docker/odoo/odoo-data:/var/lib/odoo
+      - odoo-data:/var/lib/odoo
 
   db:
     image: postgres:13
     container_name: odoo_db
-#    volumes:
-#      - /home/feder/docker/odoo/odoo-db:/var/lib/odoo
+    volumes:
+#      - odoo-db:/var/lib/odoo
+      - odoo-db:/var/lib/postgresql/data/pgdata
       #- ./config:/etc/odoo
       #- ./addons:/mnt/extra-addons
-#    restart: always
+    restart: always
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_PASSWORD=odoo
       - POSTGRES_USER=odoo
+      - PGDATA=/var/lib/postgresql/data/pgdata
 
-
-#volumes:
-#  odoo-data:
-#  odoo-db:
+volumes:
+  odoo-data:
+  odoo-db:
   
