--- a/docker-apps/portainer/docker-compose.yml
+++ b/docker-apps/portainer/docker-compose.yml
@@ -10,10 +10,18 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock
-      - portainer-data:/data
+      - ${DATADIR}/data:/data
 #    ports:
 #      - 8000:8000
 #      - 9000:9000
-    network_mode: host
+#If no proxy used, host is the easiest way to deploy the container
+#    network_mode: host
+    networks: 
+      - npm-nw
+
 volumes:
-  portainer-data:
+  data:
+
+networks:
+  npm-nw:
+    external: true
