--- a/docker-apps/pihole/docker-compose.yaml
+++ b/docker-apps/pihole/docker-compose.yaml
@@ -1,36 +1,35 @@
 version: "3"
+
 # More info at https://github.com/pi-hole/docker-pi-hole/ and https://docs.pi-hole.net/
 # Also: https://github.com/chriscrowe/docker-pihole-unbound
-
 services:
   pihole:
     container_name: pihole
-#    image: pihole/pihole:latest
-    image: cbcrowe/pihole-unbound:latest
+    image: pihole/pihole:latest
     hostname: ${HOSTNAME}
     domainname: ${DOMAIN_NAME}
     ports:
       - "53:53/tcp"
       - "53:53/udp"
-#      - "67:67/udp"
-#      - "${PIHOLE_WEBPORT}:80/tcp"
+      - "67:67/udp"
+      - "${PIHOLE_WEBPORT}:80/tcp"
     environment:
-      - FTLCONF_REPLY_ADDR4=${FTLCONF_REPLY_ADDR4}
       - TZ=${TZ:-UTC}
       - WEBPASSWORD=${WEBPASSWORD}
-      - WEBTHEME=${WEBTHEME:-default-light}
-      - REV_SERVER=${REV_SERVER:-false}
-      - REV_SERVER_TARGET=${REV_SERVER_TARGET}
-      - REV_SERVER_DOMAIN=${REV_SERVER_DOMAIN}
-      - REV_SERVER_CIDR=${REV_SERVER_DOMAIN}
-      - PIHOLE_DNS_=127.0.0.1#5335
-      - DNSSEC="false"
+      - FTLCONF_REPLY_ADDR4=${IP}
+
+      - PIHOLE_DNS_=1.1.1.1;1.0.0.1
+      - IPv6=false
+
+      - INTERFACE=${INTERFACE}
       - DNSMASQ_LISTENING=single
 
     # Volumes store your data between container upgrades
-    volumes:
-      - '${DATADIR}/etc-pihole-unbound/:/etc/pihole/'
-      - '${DATADIR}/etc-dnsmasq-unbound/:/etc/dnsmasq.d/'
+#    volumes:
+#      - '${DATADIR}/etc-pihole/:/etc/pihole/'
+#      - '${DATADIR}/etc-dnsmasq.d/:/etc/dnsmasq.d/'
+#      - 'etc-pihole/:/etc/pihole/'
+#      - 'etc-dnsmasq.d/:/etc/dnsmasq.d/'
     # Recommended but not required (DHCP needs NET_ADMIN)
     #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
 #    cap_add:
@@ -39,9 +38,9 @@ services:
       - npm-nw
     restart: unless-stopped
 
-volumes:
-  etc-pihole-unbound:
-  etc-dnsmasq-unbound:
+#volumes:
+#  etc-pihole:
+#  etc-dnsmasq.d:
 
 networks: 
   npm-nw:
