--- a/docker-apps/nginx-proxy-manager/docker-compose.yaml
+++ b/docker-apps/nginx-proxy-manager/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - '81:81'
       - '443:443'
     environment:
-      - DISABLE_IPV6='true'
+      - DISABLE_IPV6=true
     volumes:
       - ${DATADIR}/data:/data
       - ${DATADIR}/letsencrypt:/etc/letsencrypt
