--- a/docker-apps/pihole/docker-compose.yaml
+++ b/docker-apps/pihole/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     ports:
       - "53:53/tcp"
       - "53:53/udp"
-      - "67:67/udp"
+#      - "67:67/udp"
 #      - "${PIHOLE_WEBPORT}:80/tcp"
     environment:
       - TZ=${TZ:-UTC}
@@ -19,13 +19,15 @@ services:
       - FTLCONF_REPLY_ADDR4=${IP}
 
       - PIHOLE_DNS_=1.1.1.1;1.0.0.1
-      - IPv6=false
+#      - IPv6=false
 
-      - INTERFACE=${INTERFACE}
+#      - INTERFACE=${INTERFACE}
       - DNSMASQ_LISTENING=single
-    dns:
-      - 127.0.0.1
-      - 1.1.1.1
+
+      - ADMIN_EMAIL=${ADMIN_EMAIL}
+#    dns:
+#      - 127.0.0.1
+#      - 1.1.1.1
 
     # Volumes store your data between container upgrades
     volumes:
