--- a/docker-apps/kanboard/docker-compose.yaml
+++ b/docker-apps/kanboard/docker-compose.yaml
@@ -10,16 +10,28 @@ services:
       - ${DATADIR}/kanboard_plugins:/var/www/app/plugins
       - ${DATADIR}/kanboard_ssl:/etc/nginx/ssl
     environment:
-      DATABASE_URL: mysql://kanboard:kanboard-secret@db/kanboard
+      DATABASE_URL: mysql://kanboard:${DB_PASS}@db/kanboard
+    networks:
+      - npm-nw
+      - k-internal
+
   db:
     image: mariadb:latest
     command: --default-authentication-plugin=mysql_native_password
     environment:
-      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASS}
       MYSQL_DATABASE: kanboard
       MYSQL_USER: kanboard
-      MYSQL_PASSWORD: kanboard-secret
+      MYSQL_PASSWORD: ${DB_PASS}
+    networks:
+      - k-internal
+
 volumes:
   kanboard_data:
   kanboard_plugins:
   kanboard_ssl:
+
+networks:
+  k-internal:
+  npm-nw:
+    external: true
