--- a/docker-apps/nextcloud/docker-compose.yaml
+++ b/docker-apps/nextcloud/docker-compose.yaml
@@ -4,45 +4,66 @@ services:
   db:
     image: postgres:alpine
     container_name: nextcloud_db
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     restart: always
     volumes:
-      - /home/feder/docker/nextcloud/nextcloud_db:/var/lib/postgresql/data
-    env_file:
-      - db.env
+      - ${DATADIR}/nextcloud_db:/var/lib/postgresql/data
+    networks:
+      - nextcloud-internal
 
   redis:
     image: redis:alpine
     restart: always
+    networks:
+      - nextcloud-internal
 
   app:
     image: nextcloud:apache
     container_name: nextcloud_app
     restart: always
-    ports:
+#    ports:
 #      - 127.0.0.1:8200:80
-      - 8200:80
+#      - 8200:80
     volumes:
-      - /home/feder/docker/nextcloud/nextcloud_app:/var/www/html
+      - ${DATADIR}/nextcloud_app:/var/www/html
+      - ${NEXTCLOUD_DATA_DIR}:/var/www/html/data
     environment:
       - POSTGRES_HOST=db
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - REDIS_HOST=redis
-    env_file:
-      - db.env
+      - NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_ADMIN_USER}
+      - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD}
+      - NEXTCLOUD_TRUSTED_DOMAINS=${NEXTCLOUD_TRUSTED_DOMAINS}
     depends_on:
       - db
       - redis
+    networks:
+      - npm-nw
+      - nextcloud-internal
 
-  cron:
-    image: nextcloud:apache
-    container_name: nextcloud_cron
-    restart: always
-    volumes:
-      - /home/feder/docker/nextcloud/nextcloud_app:/var/www/html
-    entrypoint: /cron.sh
-    depends_on:
-      - db
-      - redis
+#  cron:
+#    image: nextcloud:apache
+#    container_name: nextcloud_cron
+#    restart: always
+#    volumes:
+#      - ${DATADIR}/nextcloud_app:/var/www/html
+#    entrypoint: /cron.sh
+#    depends_on:
+#      - db
+#      - redis
+#    networks:
+#      - nextcloud-internal
 
 volumes:
   nextcloud_db:
   nextcloud_app:
+
+networks:
+  nextcloud-internal:
+  npm-nw:
+    external: true
