--- a/docker-apps/nginx-proxy-manager/docker-compose.yaml
+++ b/docker-apps/nginx-proxy-manager/docker-compose.yaml
@@ -1,3 +1,4 @@
+
 version: '3'
 services:
   npm-app:
@@ -6,16 +7,21 @@ services:
     restart: unless-stopped
     ports:
       - '80:80'
-      - '81:81'
+#      - '81:81'
       - '443:443'
-    environment:
-      - DISABLE_IPV6=true
+#    environment:
+#      - DISABLE_IPV6=true
     volumes:
       - ${DATADIR}/data:/data
       - ${DATADIR}/letsencrypt:/etc/letsencrypt
+#      - ./config.json:/app/config/production.json
     networks:
       - npm-nw
       - npm-internal
+    healthcheck:
+      test: ["CMD", "/bin/check-health"]
+      interval: 10s
+      timeout: 3s
 
 volumes:
   data:
