--- a/docker-apps/portainer/docker-compose.yml
+++ b/docker-apps/portainer/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  portainer:
+  app:
     image: portainer/portainer-ce:latest
     container_name: portainer
 #    command: -H unix:///var/run/docker.sock
