--- a/config/etc/bitcoin/bitcoin.conf
+++ b/config/etc/bitcoin/bitcoin.conf
@@ -23,6 +23,19 @@ server=1
 dbcache=4000
 blocksonly=1
 
+# [zeromq]
+# Enable publishing of block hashes to <address>.
+zmqpubhashblock=tcp://127.0.0.1:8443
+# Enable publishing of transaction hashes to <address>.
+#zmqpubhashtx=tcp://127.0.0.1:8444
+# Enable publishing of raw block hex to <address>.
+#zmqpubrawblock=tcp://127.0.0.1:8445
+# Enable publishing of raw transaction hex to <address>.
+#zmqpubrawtx=tcp://127.0.0.1:8446
+# Enable publish hash block and tx sequence in <address>.
+#zmqpubsequence=tcp://127.0.0.1:8447
+
+
 # [Sections]
 # Most options automatically apply to mainnet, testnet, and regtest networks.
 # If you want to confine an option to just one network, you should add it in the                                                                                                                                    relevant section.
