--- a/config/etc/nginx/stream-available/fulcrum-stream.conf
+++ b/config/etc/nginx/stream-available/fulcrum-stream.conf
@@ -1,4 +1,4 @@
-upstream electrs {
+upstream fulcrum {
   server 127.0.0.1:50001;
 }
 
@@ -7,5 +7,5 @@ server {
   # Do not change the _DOMAIN_ part. It will be replaced with sed in the Security script.
   ssl_certificate /etc/letsencrypt/live/_DOMAIN_/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/_DOMAIN_/privkey.pem;
-  proxy_pass electrs;
+  proxy_pass fulcrum;
 }
