--- a/config/etc/fulcrum/fulcrum.conf
+++ b/config/etc/fulcrum/fulcrum.conf
@@ -42,12 +42,12 @@ tcp = 127.0.0.1:50001
 
 # *RECOMMENDED* - WS bind - 'ws' - DEFAULT: Nothing, Specifies the IPv4 or IPv6
 # interface:port to bind to for Web Socket support (ws://).
-ws = 0.0.0.0:50003
+#ws = 0.0.0.0:50003
 
 # *RECOMMENDED* - WSS bind - 'wss' - DEFAULT: Nothing, Specifies the IPv4 or
 # IPv6 interface:port to bind to for Web Socket Secure support (wss://). The
 # presence of this variable requires key= and cert= both be specified.
-wss = 0.0.0.0:50004
+#wss = 0.0.0.0:50004
 
 # SSL cert. - 'cert' - DEFAULT: None (required for SSL) (PEM, self-signed ok)
 # Do not change the _DOMAIN_ part. It will be replaced with sed in the Security script.
