--- a/config/etc/systemd/system/bitcoind.service
+++ b/config/etc/systemd/system/bitcoind.service
@@ -18,18 +18,17 @@ After=network-online.target
 Wants=network-online.target
 
 [Service]
+# Make sure the config directory is readable by the service user
+PermissionsStartOnly=true
+ExecStartPre=/bin/chgrp bitcoin /var/bitcoind/
 ExecStart=/usr/bin/bitcoind -daemonwait \
                             -pid=/run/bitcoind/bitcoind.pid \
                             -conf=/etc/bitcoin/bitcoin.conf \
                             -datadir=/var/lib/bitcoind/
-
-# Make sure the config directory is readable by the service user
-PermissionsStartOnly=true
-ExecStartPre=/bin/chgrp bitcoin /etc/bitcoin
+                            -startupnotify="chmod g+r /var/lib/bitcoind/.cookie"
 
 # Process management
 ####################
-
 Type=forking
 PIDFile=/run/bitcoind/bitcoind.pid
 Restart=on-failure
