--- a/config/etc/bitcoin/bitcoin.conf
+++ b/config/etc/bitcoin/bitcoin.conf
@@ -3,7 +3,8 @@
 
 # [network]
 # Add a node IP address to connect to and attempt to keep the connection open. T                                                                                                                                   his option can be set multiple times.
-#addnode=11111
+## Barcelona Bitcoin Only node
+addnode=ots6ud7ovx6furs4sxlm7aze5q44qtoeapwcukelcxc3i2r5tkxgdlqd.onion:8333
 # Bind to given address and always listen on it. (default: 0.0.0.0). Use [host]:                                                                                                                                   port notation for IPv6. Append =onion to tag any incoming connections to that ad                                                                                                                                   dress and port as incoming Tor connections
 #bind=0.0.0.0
 # Connect through <ip:port> SOCKS5 proxy.
