--- a/config/etc/nginx/sites-available/pihole.conf
+++ b/config/etc/nginx/sites-available/pihole.conf
@@ -9,7 +9,7 @@ server {
         return 301 https://$server_name$request_uri;
     }
     
-    root /var/www/pihole;
+    root /var/www/html;
     autoindex off;
 
     index pihole/index.php index.php index.html index.htm;
@@ -22,7 +22,7 @@ server {
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
-        fastcgi_pass unix:/run/php/php7.3-fpm.sock;
+        fastcgi_pass unix:/run/php/php-fpm.sock;
         fastcgi_param FQDN true;
     }
 
@@ -31,7 +31,43 @@ server {
     }
 
     location /admin {
-        root /var/www/pihole;
+        root /var/www/html;
+        index index.php index.html index.htm;
+    }
+
+    location ~ /\.ht {
+        deny all;
+    }
+}
+
+server {
+    listen 80 default_server;
+    listen [::]:80 default_server;
+
+    root /var/www/html;
+    server_name _;
+    autoindex off;
+
+    index pihole/index.php index.php index.html index.htm;
+
+    location / {
+        expires max;
+        try_files $uri $uri/ =404;
+    }
+
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
+        fastcgi_pass unix:/run/php/php-fpm.sock;
+        fastcgi_param FQDN true;
+    }
+
+    location /*.js {
+        index pihole/index.js;
+    }
+
+    location /admin {
+        root /var/www/html;
         index index.php index.html index.htm;
     }
 
