--- a/config/etc/nginx/sites-available/homer.conf
+++ b/config/etc/nginx/sites-available/homer.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-    server_name mempool._DOMAIN_;
+    server_name dashboard._DOMAIN_;
     ssl_certificate /etc/letsencrypt/live/_DOMAIN_/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/_DOMAIN_/privkey.pem;
     
@@ -19,8 +19,10 @@ server {
     ssl_session_cache shared:SSL:50m;
     ssl_session_timeout 1d;
     
+
+
     # Configure the location of the site's root directory and default index file
-    root /var/www/mempool;
+    root /var/www/homer;
     index index.html;
     
     # Configure additional location blocks as needed
