--- a/config/etc/nginx/sites-available/pihole.conf
+++ b/config/etc/nginx/sites-available/pihole.conf
@@ -9,6 +9,9 @@ server {
         return 301 https://$server_name$request_uri;
     }
     
+    # Security headers and other configs
+    include snippets/security.conf;
+        
     root /var/www/html;
     autoindex off;
 
