--- a/config/etc/bitcoin/bitcoin.conf
+++ b/config/etc/bitcoin/bitcoin.conf
@@ -9,20 +9,24 @@ addnode=ots6ud7ovx6furs4sxlm7aze5q44qtoeapwcukelcxc3i2r5tkxgdlqd.onion:8333
 #bind=0.0.0.0
 # Connect through <ip:port> SOCKS5 proxy.
 #proxy=9050
-# Number of seconds to keep misbehaving peers from reconnecting.
-#bantime=86402
 # Only connect to peers via Tor.
 #onlynet=onion
 
 # [core]
 # Maintain a full transaction index, used by the getrawtransaction rpc call.
 txindex=1
-server=1
 
 # Initial block download optimizations
 # Comment them out and restart after full sync
 dbcache=4000
 blocksonly=1
+
+# [rpc]
+# Accept command line and JSON-RPC commands.
+server=1
+# Username and hashed password for JSON-RPC connections. The field <userpw> comes in the format: <USERNAME>:<SALT>$<HASH>. 
+# RPC clients connect using rpcuser=<USERNAME>/rpcpassword=<PASSWORD> arguments. This option can be specified multiple times.
+### rpcauth will be generated with 30-bitcoin.sh script.
 
 # [zeromq]
 # Enable publishing of block hashes to <address>.
