--- a/config/etc/mempool/mempool-config.json
+++ b/config/etc/mempool/mempool-config.json
@@ -32,8 +32,8 @@
     "CORE_RPC": {
         "HOST": "127.0.0.1",
         "PORT": 8332,
-        "COOKIE": true,
-        "COOKIE_PATH": "/var/lib/bitcoind/.cookie"
+        "USERNAME": "rpcuser",
+        "PASSWORD": "rpcpassword"
     },
     "ELECTRUM": {
       "HOST": "127.0.0.1",
@@ -44,7 +44,7 @@
       "ENABLED": true,
       "HOST": "127.0.0.1",
       "PORT": 3306,
-      "SOCKET": "/var/run/mysql/mysql.sock",
+      "SOCKET": "/var/run/mysqld/mysqld.sock",
       "DATABASE": "mempool",
       "USERNAME": "mempool",
       "PASSWORD": "mempool"
