--- a/config/etc/mempool/mempool-config.sample.json
+++ b/config/etc/mempool/mempool-config.sample.json
@@ -55,7 +55,7 @@
       "ENABLED": true,
       "HOST": "127.0.0.1",
       "PORT": 3306,
-      "SOCKET": "/var/run/mysql/mysql.sock",
+      "SOCKET": "/var/run/mysqld/mysqld.sock",
       "DATABASE": "mempool",
       "USERNAME": "mempool",
       "PASSWORD": "mempool"
