--- a/config/etc/bitcoin/bitcoin.conf
+++ b/config/etc/bitcoin/bitcoin.conf
@@ -1,5 +1,5 @@
 # This config should be placed in following path:
-# ~/.bitcoin/bitcoin.conf
+# /etc/bitcoind/bitcoin.conf
 
 # [network]
 # Add a node IP address to connect to and attempt to keep the connection open. T                                                                                                                                   his option can be set multiple times.
@@ -11,15 +11,23 @@ addnode=ots6ud7ovx6furs4sxlm7aze5q44qtoeapwcukelcxc3i2r5tkxgdlqd.onion:8333
 #proxy=9050
 # Only connect to peers via Tor.
 #onlynet=onion
+# Support filtering of blocks and transactions with bloom filters. (for BISQ)
+peerbloomfilters=1
 
 # [core]
 # Maintain a full transaction index, used by the getrawtransaction rpc call.
 txindex=1
+# Keep the transaction memory pool below <n> megabytes.
+maxmempool=250
+# Execute command on startup.
+startupnotify=chmod\ g+r\ /var/lib/bitcoind/.cookie
+# Specify a non-default location to store blockchain and other data.
+datadir=/var/lib/bitcoind
 
-# Initial block download optimizations
+# Initial block download optimizations - recommended to uncomment them
 # Comment them out and restart after full sync
-dbcache=4000
-blocksonly=1
+#dbcache=4000
+#blocksonly=1
 
 # [rpc]
 # Accept command line and JSON-RPC commands.
