--- a/config/etc/nginx/sites-available/mempool.conf
+++ b/config/etc/nginx/sites-available/mempool.conf
@@ -85,3 +85,11 @@ server {
     include /etc/nginx/snippets/nginx-mempool.conf;
 
 }
+
+server {
+    listen 80;
+    listen [::]:80;
+    server_name mempool._DOMAIN_;
+
+    return 301 https://$host$request_uri;
+}
