--- a/config/etc/nginx/sites-available/pihole.conf
+++ b/config/etc/nginx/sites-available/pihole.conf
@@ -38,6 +38,10 @@ server {
         index index.php index.html index.htm;
     }
 
+    location = / {
+        return 301 https://$server_name/admin;
+    }
+    
     location ~ /\.ht {
         deny all;
     }
