fulcrum and mempool logs

--- a/config/etc/systemd/system/mempool.service
+++ b/config/etc/systemd/system/mempool.service
@@ -17,5 +17,8 @@ ProtectSystem=full
 NoNewPrivileges=true
 PrivateDevices=true
 
+StandardOutput=file:/var/log/mempool/mempool.log
+StandardError=file:/var/log/mempool/error.log
+
 [Install]
 WantedBy=multi-user.target
